added follow/unfollow button, needs a little debugging but not bad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <string name="post_hint">Write something here</string>
 
 
+    <string name="follow_button">Follow</string>
+    <string name="unfollow_button">Unfollow</string>
+
+
 
     <string name="sampleAlias">"@UserAlias"</string>
     <string name="sampleUserName">The User</string>
