--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,7 @@
     <string name="password_login">Password</string>
     <string name="first_name_sign_up">First Name</string>
     <string name="last_name_sign_up">Last Name</string>
-    <string name="email_sign_up">Email</string>
-    <string name="male_button">Male</string>
-    <string name="female_button">Female</string>
+    <string name="upload_photo">Upload Photo</string>
 
     <string name="sample_post">Message</string>
 
